# HandsOnLLMs

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
LiteRAG/: README.md
LiteRAG/src/embedding/: embed_and_store.py  load_embed_model.py
LiteRAG/src/inference/: fero_gradio.py  inference.py
Local RAG/: README.md
Local RAG/src/: splitter.py
Local RAG/src/data/: __init__.py  cli.py  data_pipline.py  saver.py  splitter.py
Text Classification/: README.md  config.py  requirements.txt  run_pipeline.py
Text Classification /: README.md
Text Classification/.gradio/flagged/: dataset1.csv
Text Classification/app/: app.py  gradio_app.py
Text Classification/app/.gradio/flagged/: dataset1.csv
Text Classification/notebooks/: 01_eda.ipynb  02_feature_extraction.ipynb  03_embedding.ipynb  04_finetune.ipynb  05_prompt.ipynb  train_labels.npy
Text Classification/scripts/: run_few_shot.py  run_launcher.py  run_zero_shot.py
Text Classification/src/: data.py  embedding_pipeline.py  eval.py  features.py  few_shot.py  test.py  train_features.py  train_finetune.py  trainer.py  utils.py  zero_shot.py
notebooks/: Prompt_Engineering.ipynb  Semantic_Search.ipynb  Text_Classification.ipynb  langchains.ipynb  langchains_intro.ipynb  local_Rag.ipynb  semantic_search.ipynb  train.txt  train.txt.1  train.txt.2  train.txt.3
