[project]
name = "hands-on-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.1",
    "cohere>=5.16.1",
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "faiss-cpu",
    "fitz>=0.0.1.dev2",
    "flash-attn>=2.8.2",
    "gradio>=5.35.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "pymupdf>=1.26.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "transformers>=4.53.0",
]
