[project]
name = "hands-on-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "cohere>=5.16.1",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "faiss-cpu>=1.11.0.post1",
    "fitz>=0.0.1.dev2",
    "flash-attn>=2.8.2",
    "gradio>=5.39.0",
    "ipykernel>=6.30.0",
    "llama-cpp-python>=0.3.14",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
